--- a/home.html
+++ b/home.html
@@ -20,8 +20,8 @@
     <!-- Main -->
     <main id="main" class="main" tabindex="-1">
         <h1 class="ttl">Welcome</h1>
-        <img src="img/corner-dec.png" id="left-corner" alt="" width="25%">
-        <img src="img/corner-dec.png" id="right-corner" alt="" width="25%">
+        <img src="img/corner-dec.png" id="left-corner" alt="">
+        <img src="img/corner-dec.png" id="right-corner" alt="">
 
         <div id="blurb">
             <h2>Goals</h2>
